# pypto

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTION.md  CONTRIBUTION_en.md  MANIFEST.in  OAT.xml  README.md  README_en.md  SECURITY.md  SECURITY_en.md  Third_Party_Open_Source_Softerware_Notice  build.sh  build_ci.py  classify_rule.yaml  conftest.py  pyproject.toml  pytest.ini  setup.py  version.cmake
framework/src/adapter/: CMakeLists.txt
framework/src/adapter/api/: acl_api.cpp  acl_api.h  acl_define.h  adump_api.cpp  adump_api.h  adump_define.h  hal_api.cpp  hal_api.h  hal_define.h  hcomm_api.cpp  hcomm_api.h  hcomm_define.h  msprof_api.cpp  msprof_api.h  msprof_define.h  runtime_api.cpp  runtime_api.h  runtime_capture_context.cpp  runtime_capture_context.h  runtime_define.h
framework/src/adapter/manager/: adapter_manager.cpp  adapter_manager.h  cann_adapter.h  plugin_handler.cpp  plugin_handler.h
framework/src/adapter/stubs/: acl_stubs.cpp  acl_stubs.h  adump_stubs.cpp  adump_stubs.h  hal_stubs.cpp  hal_stubs.h  hcomm_stubs.cpp  hcomm_stubs.h  msprof_stubs.cpp  msprof_stubs.h  runtime_stubs.cpp  runtime_stubs.h
framework/src/codegen/: CMakeLists.txt  codegen.cpp  codegen.h  codegen_cce.cpp  codegen_cce.h  codegen_common.h  codegen_factory.h  codegen_op.cpp  codegen_op.h
framework/src/codegen/cloudnpu/: codegen_cloudnpu.cpp  codegen_cloudnpu.h  codegen_cube.cpp  codegen_distributed.cpp  codegen_mte.cpp  codegen_mte_conv.cpp  codegen_mte_gather.cpp  codegen_mte_indexout.cpp  codegen_op_cloudnpu.cpp  codegen_op_cloudnpu.h  codegen_scalar.cpp  codegen_vector.cpp  codegen_vector_binary.cpp  codegen_vector_sort.cpp  codegen_vector_unary.cpp  codegen_vector_unary_with_tmp.cpp  op_print_param_def.h
framework/src/codegen/npu/: codegen_cube.cpp  codegen_distributed.cpp  codegen_mte.cpp  codegen_mte_conv.cpp  codegen_mte_gather.cpp  codegen_mte_indexout.cpp  codegen_npu.cpp  codegen_npu.h  codegen_op_npu.cpp  codegen_op_npu.h  codegen_scalar.cpp  codegen_vector.cpp  codegen_vector_binary.cpp  codegen_vector_gather_scatter.cpp  codegen_vector_sort.cpp  codegen_vector_unary.cpp  codegen_vector_unary_with_tmp.cpp  op_print_param_def.h
framework/src/codegen/stmt_mgr/: codegen_for_block.cpp  codegen_for_block.h
framework/src/codegen/symbol_mgr/: codegen_symbol.cpp  codegen_symbol.h  symbol_id_gen.h
framework/src/codegen/utils/: codegen_error.h  codegen_utils.cpp  codegen_utils.h  parallel_execute.cpp  parallel_execute.h
framework/src/cost_model/simulation/: CMakeLists.txt  CostModelInterface.cpp  CostModelInterface.h  backend.cpp  backend.h  cost_model_launcher.h  tileop.md
framework/src/cost_model/simulation_ca/: CMakeLists.txt  PipeSimulator.cpp  PipeSimulator.h  SimulatorAdaptor.cpp  SimulatorAdaptor.h
framework/src/cost_model/simulation_platform/: CMakeLists.txt  platform.cpp  platform.h
framework/src/execute/: CMakeLists.txt  aicore_runtime_manager.cpp  aicore_runtime_manager.h  fatbin_parser.cpp  fatbin_parser.h  gentask_utils.cpp  tile_fwk_execute_api.cpp  tile_fwk_log.h
framework/src/execute/include/: gentask_utils.h
framework/src/interface/: CMakeLists.txt
framework/src/interface/cache/: function_cache.cpp  function_cache.h  hash.h  hash_buffer.cpp  topo_processor.h
framework/src/interface/compiler_monitor/: monitor_impl.cpp  monitor_impl.h  monitor_manager.cpp  monitor_manager.h  monitor_pass_scope.h  monitor_stage_scope.h  monitor_util.h
framework/src/interface/configs/: config.cpp  config_manager.cpp  config_manager.h  config_manager_ng.cpp  config_manager_ng.h  ini_parser.cpp  ini_parser.h  platform.cpp  tile_fwk_config.json  tile_fwk_config_ng.json  tile_fwk_config_schema.json  tile_fwk_types.json  validate.py
framework/src/interface/core/: backtrace.cpp
framework/src/interface/function/: function.cpp  function.h  rebuildable_attribute.cpp  rebuildable_attribute.h
framework/src/interface/inner/: any.h  config.h  dlpack_dtype.h  element.h  function.h  hash_buffer.h  pre_def.h  tile_shape.h  tilefwk.h
framework/src/interface/interpreter/: calc.cpp  calc.h  calc_api.h  calc_common.cpp  calc_cube.cpp  calc_distributed.cpp  calc_vector.cpp  communication.cpp  communication.h  determinism.cpp  determinism.h  element.cpp  flow_verifier.cpp  flow_verifier.h  function.cpp  function.h  interpreter_log.cpp  interpreter_log.h  operation.cpp  operation.h  raw_tensor_data.cpp  raw_tensor_data.h  thread_pool.h  verify_error.h
framework/src/interface/ir/: block_call.cpp  builder.cpp  core.cpp  expr.cpp  function.cpp  memref.cpp  op_registry.cpp  opcode.cpp  operation.cpp  program.cpp  statement.cpp  stmt.cpp  structural_equal.cpp  structural_hash.cpp  type.cpp  utils.cpp  value.cpp
framework/src/interface/operation/: attr_holder.h  attribute.cpp  attribute.h  conv_operation_impl.cpp  cube_operation_impl.cpp  cycles.cpp  cycles.h  fake_trans_operation_impl.cpp  op_infer_shape_impl.cpp  op_infer_shape_impl.h  opcode.cpp  opcode.h  operation.cpp  operation.h  operation_common.cpp  operation_common.h  operation_impl.cpp  operation_impl.h  tile_shape.cpp  tile_shape_verifier.h  verifier.h
framework/src/interface/plugin/: plugin.cpp  plugin.h
framework/src/interface/program/: program.cpp  program.h  recorder.cpp
framework/src/interface/registry/: op_registry.cpp
framework/src/interface/schema/: schema.h  schema_base.h  schema_def_attr.h  schema_def_common.h  schema_def_trace.h  schema_parser.cpp  schema_parser.h
framework/src/interface/tensor/: float.h  (+34 more)
framework/src/passes/: CMakeLists.txt
framework/src/utils/: CMakeLists.txt  file_utils.cpp  file_utils.h
framework/tests/st/: CMakeLists.txt
framework/tests/ut/: CMakeLists.txt  pytest.ini.in
python/src/: CMakeLists.txt  pybind11.cpp  pybind_common.h
python/src/bindings/: bindings.h  controller.cpp  cost_model.cpp  distributed.cpp  element.cpp  enum.cpp  function.cpp  ir.cpp  operation.cpp  pass_config.cpp  platform.cpp  runtime.cpp  symbolic_scalar.cpp  tensor.cpp  torch_tensor_converter.cpp  torch_tensor_converter.h  utils.cpp
(+4863 files in other folders)
